# HYDRA

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  capability-matrix.md
examples/: README.md
examples/fraud_detection/: pipeline.py
src/hydraml/: __init__.py  cli.py  errors.py  issues.py  loader.py
src/hydraml/backends/: __init__.py  _codegen.py  airflow.py  base.py  kubeflow.py  local.py  prefect.py
src/hydraml/dsl/: __init__.py  decorators.py  handles.py
src/hydraml/ir/: __init__.py  graph.py  model.py  serde.py
tests/: test_cli.py  test_codegen.py  test_dsl.py  test_graph.py  test_loader.py  test_local_backend.py  test_serde.py  test_validation.py
tests/golden/: fraud_detection_airflow.py  fraud_detection_kubeflow.py  fraud_detection_prefect.py
